clusters/k3s-cluster/nextcloud/nextcloud.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
spec:
  rules:
    - host: nextcloud.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
